force-app/main/default/objects/Agent__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>