force-app/main/default/objects/Agent__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The field will store the name of the agent.</description>
    <inlineHelpText>Valid agent email for communication purpose</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>