force-app/main/default/objects/Agent__c/fields/Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Experience_Level__c</fullName>
    <description>Categorizes agent by experience level</description>
    <formula>IF(OR(ISBLANK(Years_of_Experience__c), Years_of_Experience__c = 0), &quot;Unknown&quot;,
  IF(Years_of_Experience__c &lt; 2, &quot;New Agent&quot;,
    IF(Years_of_Experience__c &lt; 5, &quot;Junior Agent&quot;,
      IF(Years_of_Experience__c &lt; 10, &quot;Experienced Agent&quot;,
        IF(Years_of_Experience__c &lt; 20, &quot;Senior Agent&quot;, &quot;Veteran Agent&quot;)
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience Level</label>
    <type>Text</type>
</CustomField>