force-app/main/default/objects/Agent__c/fields/Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Licence_Number__c</fullName>
    <description>The valid licence number</description>
    <inlineHelpText>The valid licence number</inlineHelpText>
    <label>Licence Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>