force-app/main/default/objects/Agent__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <inlineHelpText>The Job title of the agent</inlineHelpText>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>