force-app/main/default/objects/Agent__c/fields/Team_assignment__c.field-meta.xml
<CustomField>
    <fullName>Team_assignment__c</fullName>
    <label>Team assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manhattan Elite Team</fullName>
            </value>
            <value>
                <fullName>Commercial Division</fullName>
            </value>
            <value>
                <fullName>Luxury Properties Group</fullName>
            </value>
            <value>
                <fullName>Chelsea Residential Team</fullName>
            </value>
            <value>
                <fullName>South Austin Team</fullName>
            </value>
            <value>
                <fullName>Denver Metro Group</fullName>
            </value>
            <value>
                <fullName>Miami Beach Specialists</fullName>
            </value>
            <value>
                <fullName>Pearl District Team</fullName>
            </value>
            <value>
                <fullName>Nashville Residential</fullName>
            </value>
            <value>
                <fullName>Waterfront Properties</fullName>
            </value>
            <value>
                <fullName>Scottsdale Luxury Team</fullName>
            </value>
            <value>
                <fullName>Back Bay Specialists</fullName>
            </value>
            <value>
                <fullName>SouthPark Team</fullName>
            </value>
            <value>
                <fullName>Strip Properties Group</fullName>
            </value>
            <value>
                <fullName>Telegraph Hill Team</fullName>
            </value>
            <value>
                <fullName>Bayshore Properties</fullName>
            </value>
            <value>
                <fullName>Buckhead Elite</fullName>
            </value>
            <value>
                <fullName>Gold Coast Team</fullName>
            </value>
            <value>
                <fullName>Heights Residential</fullName>
            </value>
            <value>
                <fullName>Uptown Specialists</fullName>
            </value>
            <value>
                <fullName>La Jolla Luxury Group</fullName>
            </value>
            <value>
                <fullName>Northwest Heights Team</fullName>
            </value>
            <value>
                <fullName>Ahwatukee Team</fullName>
            </value>
            <value>
                <fullName>Highland Park Elite</fullName>
            </value>
            <value>
                <fullName>Oceanfront Properties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>