force-app/main/default/objects/Agent__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <inlineHelpText>Years of Experience the Agent is selling the properties</inlineHelpText>
    <label>Years of Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>