force-app/main/default/objects/Agent__c/validationRules/Valid_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Phone_Format</fullName>
    <active>true</active>
    <description>Ensures phone number follows proper format</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Phone__c)),
  NOT(
    OR(
      REGEX(Phone__c, &quot;^\\([0-9]{3}\\) [0-9]{3}-[0-9]{4}$&quot;),
      REGEX(Phone__c, &quot;^[0-9]{3}-[0-9]{3}-[0-9]{4}$&quot;),
      REGEX(Phone__c, &quot;^\\+1 \\([0-9]{3}\\) [0-9]{3}-[0-9]{4}$&quot;)
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone must be in format (555) 123-4567 or 555-123-4567</errorMessage>
</ValidationRule>