force-app/main/default/objects/Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Licence_Number__c</columns>
    <columns>Profile__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>Years_of_Experience__c</columns>
    <columns>Team_assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>